manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vanguard
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: vanguard
spec:
  ingressClassName: nginx
  rules:
    - host: vanguard.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vanguard
                port:
                  number: 80
